first website change

--- a/contacts.html
+++ b/contacts.html
@@ -13,7 +13,8 @@
 <ul>
     <li>Instagram:_ayesha_kumar_</li>
     <li>Email ID:ayeshaakumar@gmail.com</li>
-</ul></font>
+</ul>
+<a href="index.html">Click here to go back to the main page</a></font>
 
 
 </body>
