--- a/interests.html
+++ b/interests.html
@@ -19,6 +19,7 @@
 <li><h2>Others</h2></li>
 <p3>I love nature and exploring new places.Village life interests me a lot.I love the simple things in life like old hindi music,flowers,paintings,novels and good movies.I am currently trying to figure out what I want to do in my career as I want to do something that makes me happy.I shall  stop here otherwise I will go on and on(Warning:I’m a chatterbox xD).</p3>
 </font></ol>
-<font size=5><h4>click <a href="contacts.html">here</a> to go to the contacts page.</h4></font>
+<font size=5><h4>click <a href="contacts.html">here</a> to go to the contacts page.</h4>
+    <a href="index.html">Click here to go back to the main page</a></font>
 </body>
 </html>
