--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
 <body>  
     <h1>Introduction</h1>
     <p><font size="5">Aloha!I’m Ayesha A Kumar,you can call me Ayesha.I'm currently pursuing my first year ofcomputer science  engineering at BIT.I have studied in Bishop Cottons Girls’ School for nine years and studied in Sri Kumarans Children Home before that.I  have played  for the hockey team at cottons for eight years and pursued badminton for one year.I  love cooking(doesn’t mean I’m good at it…lol).click <a href=interests.html>here</a> to find out what my interests are.</font></p>
-    <img>
+    
+    <ul>
+        <font size=5><li><a href="interests.html">Interests</a></li>
+        <li><a href="contacts.html">Contact Information</a></font></li>
+    </ul>
 </body>
 </html>
